--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <li class="main-nav__item"><a href="#" class="main-nav__link">Информация</a></li>
         <li class="main-nav__item"><a href="#" class="main-nav__link">Новости</a></li>
         <li class="main-nav__item"><a href="price.html" class="main-nav__link">Прайс-лист</a></li>
-        <li class="main-nav__item"><a href="item.html" class="main-nav__link">Магазин</a></li>
+        <li class="main-nav__item"><a href="shop.html" class="main-nav__link">Магазин</a></li>
         <li class="main-nav__item"><a href="#" class="main-nav__link">Контакты</a></li>
       </ul>
       </nav>
